feat: Подготовка к обработке больших файлов
